--- a/src/Live Auction.ipynb
+++ b/src/Live Auction.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 22.17900800704956 seconds ---\n"
+      "-- Execution time: 22.584913730621338 seconds ---\n"
      ]
     }
    ],
@@ -92,6 +92,11 @@
     "obj = s3.get_object(Bucket='data-science-project-data', Key='Human_or_Robot/train.csv')\n",
     "train = pd.read_csv(io.BytesIO(obj['Body'].read()))\n",
     "train.set_index('bidder_id', inplace=True)\n",
+    "\n",
+    "# Bring in Test Data\n",
+    "obj = s3.get_object(Bucket='data-science-project-data', Key='Human_or_Robot/test.csv')\n",
+    "test = pd.read_csv(io.BytesIO(obj['Body'].read()))\n",
+    "test.set_index('bidder_id', inplace=True)\n",
     "\n",
     "\n",
     "# Bring in bids data\n",
@@ -960,7 +965,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 54.99505424499512 seconds ---\n"
+      "-- Execution time: 57.38277745246887 seconds ---\n"
      ]
     }
    ],
@@ -1148,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1853,7 @@
        "                                      efh5o                  146  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2226,7 @@
        "                                      drdr4        86.073717        False  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2429,7 @@
        "00486a11dff552c4bd7696265724ff81yeo9v           34.044904           0.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2459,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2700,7 @@
        "00486a11dff552c4bd7696265724ff81yeo9v           34.044904           0.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2709,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2727,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3005,7 @@
        "4ab12bc61c82ddd9c2d65e60555808acqgos1           18.622474           0.0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3013,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3054,25 +3059,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Transformation Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_data(data):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Set Split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "y = training_set['outcome']\n",
-    "X = training_set.drop(['outcome','payment_account','address'],1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X = training_set.drop(['outcome','payment_account','address'],1)\n",
+    "\n",
     "# Split the Data - Only split twice since have a test set. \n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n"
    ]
@@ -3453,14 +3468,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lets do a simple upsample\n",
     "\n",
-    "# Separate the majority and minority classes\n"
+    "# Separate the majority and minority classes\n",
+    "\n",
+    "df_majority = training_set[training_set.outcome==0]\n",
+    "df_minority = training_set[training_set.outcome==1]\n",
+    "\n",
+    "# Upsample minority class\n",
+    "df_minority_upsampled = resample(df_minority, \n",
+    "                                 replace=True,     # sample with replacement\n",
+    "                                 n_samples=120,    # to match majority class\n",
+    "                                 random_state=123) # reproducible results\n",
+    " \n",
+    "# Combine majority class with upsampled minority class\n",
+    "df_upsampled = pd.concat([df_majority, df_minority_upsampled])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df_upsampled['outcome']\n",
+    "X = df_upsampled.loc[:,~df_upsampled.columns.isin(['outcome','payment_account','address'])]\n",
+    "\n",
+    "# Split the Data - Only split twice since have a test set. \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 3.782464027404785 seconds ---\n",
+      "0.9476158645276292\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Will use Grid Search to do the cross validation.\n",
+    "start_time = time.time()\n",
+    "parameters = {'subsample':[1],\n",
+    "              'max_depth':[2],\n",
+    "             'n_estimators':[500]}\n",
+    "\n",
+    "# Initialize the model.\n",
+    "clf = ensemble.GradientBoostingClassifier(max_depth=2,loss='deviance', n_estimators=800)\n",
+    "\n",
+    "#Create grid and perform 5 cross validation\n",
+    "gradient_grid = GridSearchCV(clf, parameters, cv=8, verbose=0)\n",
+    "\n",
+    "#Fit the Data\n",
+    "gradient_grid.fit(X_train, y_train)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "\n",
+    "# Score\n",
+    "\n",
+    "gradient_prediction = gradient_grid.predict(X_test)\n",
+    "\n",
+    "gradient_prediction_proba = gradient_grid.predict_proba(X_test)\n",
+    "gradient_prediction_proba = [p[1] for p in gradient_prediction_proba]\n",
+    "\n",
+    "\n",
+    "print(roc_auc_score(y_test, gradient_prediction_proba))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.97      0.99      0.98       561\n",
+      "        1.0       0.78      0.62      0.69        40\n",
+      "\n",
+      "avg / total       0.96      0.96      0.96       601\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, gradient_prediction))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im concerned with overfitting. But slightly upsampling improved recall. Which would make sense, because seeing that signal increase and maybe picking up on it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Down Sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate majority and minority classes\n",
+    "df_majority = training_set[training_set.outcome==0]\n",
+    "df_minority = training_set[training_set.outcome==1]\n",
+    " \n",
+    "# Downsample majority class\n",
+    "df_majority_downsampled = resample(df_majority, \n",
+    "                                 replace=False,    # sample without replacement\n",
+    "                                 n_samples=1500,     # to match minority class\n",
+    "                                 random_state=123) # reproducible results\n",
+    " \n",
+    "# Combine minority class with downsampled majority class\n",
+    "df_downsampled = pd.concat([df_majority_downsampled, df_minority])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df_downsampled['outcome']\n",
+    "X = df_downsampled.loc[:,~df_upsampled.columns.isin(['outcome','payment_account','address'])]\n",
+    "\n",
+    "# Split the Data - Only split twice since have a test set. \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 3.6279568672180176 seconds ---\n",
+      "0.8894202209813472\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Will use Grid Search to do the cross validation.\n",
+    "start_time = time.time()\n",
+    "parameters = {'subsample':[0.95],\n",
+    "              'max_depth':[2],\n",
+    "             'n_estimators':[500]}\n",
+    "\n",
+    "# Initialize the model.\n",
+    "clf = ensemble.GradientBoostingClassifier(max_depth=2,loss='deviance', n_estimators=800)\n",
+    "\n",
+    "#Create grid and perform 5 cross validation\n",
+    "gradient_grid = GridSearchCV(clf, parameters, cv=8, verbose=0)\n",
+    "\n",
+    "#Fit the Data\n",
+    "gradient_grid.fit(X_train, y_train)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "\n",
+    "# Score\n",
+    "\n",
+    "gradient_prediction = gradient_grid.predict(X_test)\n",
+    "\n",
+    "gradient_prediction_proba = gradient_grid.predict_proba(X_test)\n",
+    "gradient_prediction_proba = [p[1] for p in gradient_prediction_proba]\n",
+    "\n",
+    "\n",
+    "print(roc_auc_score(y_test, gradient_prediction_proba))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.94      0.99      0.96       443\n",
+      "        1.0       0.67      0.26      0.38        38\n",
+      "\n",
+      "avg / total       0.92      0.93      0.92       481\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, gradient_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
