--- a/src/Live Auction.ipynb
+++ b/src/Live Auction.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve, auc\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 21.608150959014893 seconds ---\n"
+      "-- Execution time: 27.77508044242859 seconds ---\n"
      ]
     }
    ],
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,14 +958,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 60.550578117370605 seconds ---\n"
+      "-- Execution time: 64.24801540374756 seconds ---\n"
      ]
     }
    ],
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
        "                                      efh5o                  146  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2226,7 @@
        "                                      drdr4        86.073717        False  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2429,7 @@
        "00486a11dff552c4bd7696265724ff81yeo9v           34.044904           0.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2700,7 +2700,7 @@
        "00486a11dff552c4bd7696265724ff81yeo9v           34.044904           0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2714,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2732,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3005,7 +3005,7 @@
        "4ab12bc61c82ddd9c2d65e60555808acqgos1           18.622474           0.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3458,6 +3458,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do in initial split to create hold out group\n",
+    "\n",
+    "y = training_set['outcome']\n",
+    "X = training_set.drop(['payment_account','address'],1)\n",
+    "\n",
+    "# Split the Data - Only split twice since have a test set. \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    1316\n",
+       "1.0      72\n",
+       "Name: outcome, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train['outcome'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do in initial split to create hold out group\n",
+    "\n",
+    "y = training_set['outcome']\n",
+    "X = training_set.drop(['payment_account','address'],1)\n",
+    "\n",
+    "# Split the Data - Only split twice since have a test set. \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n",
+    "\n",
+    "# Drop outcome from X_test\n",
+    "X_test = X_test.drop(['outcome'],1)\n",
+    "\n",
+    "# Do the upsample on the X_train\n",
+    "\n",
+    "df_majority = X_train[X_train.outcome==0]\n",
+    "df_minority = X_train[X_train.outcome==1]\n",
+    "\n",
+    "# Upsample minority class\n",
+    "df_minority_upsampled = resample(df_minority, \n",
+    "                                 replace=True,     # sample with replacement\n",
+    "                                 n_samples=100,    # to match majority class\n",
+    "                                 random_state=123) # reproducible results\n",
+    " \n",
+    "# Combine majority class with upsampled minority class\n",
+    "df_upsampled = pd.concat([df_majority, df_minority_upsampled])\n",
+    "\n",
+    "# Rename the X_train and y_train\n",
+    "X_train = df_upsampled.drop(['outcome'],1)\n",
+    "y_train = df_upsampled['outcome']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1417 entries, 5720c8d7bc15b94037cd75ff9496a35evugeo to c2e1242ad5ea781923a08987d55365c69fii7\n",
+      "Data columns (total 15 columns):\n",
+      "Total Bids                1417 non-null int64\n",
+      "Total Auctions            1417 non-null int64\n",
+      "Number of Merchandise     1417 non-null int64\n",
+      "Number of Device          1417 non-null int64\n",
+      "Number of IPs             1417 non-null int64\n",
+      "Number of URLs            1417 non-null int64\n",
+      "Min Mean Time per Bid     1417 non-null float64\n",
+      "Max Mean Time per Bid     1417 non-null float64\n",
+      "Min Time Particpation     1417 non-null float64\n",
+      "Max Time Particpation     1417 non-null float64\n",
+      "Mean Time Particpation    1417 non-null float64\n",
+      "Min Started Ratio         1417 non-null float64\n",
+      "Max Started Ratio         1417 non-null float64\n",
+      "Mean Started Ratio        1417 non-null float64\n",
+      "Auctions Won              1417 non-null float64\n",
+      "dtypes: float64(9), int64(6)\n",
+      "memory usage: 177.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Old Way"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
@@ -3494,23 +3611,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 3.7966744899749756 seconds ---\n",
-      "0.9616398313206823\n"
+      "--- 4.374585390090942 seconds ---\n",
+      "0.9115135453474676\n"
      ]
     }
    ],
    "source": [
     "#Will use Grid Search to do the cross validation.\n",
     "start_time = time.time()\n",
-    "parameters = {'subsample':[1],\n",
+    "parameters = {'subsample':[0.9],\n",
     "              'max_depth':[2],\n",
     "             'n_estimators':[500]}\n",
     "\n",
@@ -3518,14 +3642,14 @@
     "clf = ensemble.GradientBoostingClassifier(max_depth=2,loss='deviance', n_estimators=800)\n",
     "\n",
     "#Create grid and perform 5 cross validation\n",
-    "gradient_grid = GridSearchCV(clf, parameters, cv=8, verbose=0)\n",
+    "gradient_grid = GridSearchCV(clf, parameters, cv=8, verbose=0, scoring='roc_auc')\n",
     "\n",
     "#Fit the Data\n",
     "gradient_grid.fit(X_train, y_train)\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "\n",
     "\n",
-    "# Score\n",
+    "#  Test Score\n",
     "\n",
     "gradient_prediction = gradient_grid.predict(X_test)\n",
     "\n",
@@ -3538,7 +3662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3547,10 +3671,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "        0.0       0.97      0.99      0.98       564\n",
-      "        1.0       0.78      0.57      0.66        37\n",
+      "        0.0       0.97      0.99      0.98       566\n",
+      "        1.0       0.63      0.40      0.49        30\n",
       "\n",
-      "avg / total       0.96      0.96      0.96       601\n",
+      "avg / total       0.95      0.96      0.95       596\n",
       "\n"
      ]
     }
@@ -3564,6 +3688,92 @@
    "metadata": {},
    "source": [
     "Im concerned with overfitting. But slightly upsampling improved recall. Which would make sense, because seeing that signal increase and maybe picking up on it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5000570054465416]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Find_Optimal_Cutoff(target, predicted):\n",
+    "    \"\"\" Find the optimal probability cutoff point for a classification model related to event rate\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    target : Matrix with dependent or target data, where rows are observations\n",
+    "\n",
+    "    predicted : Matrix with predicted data, where rows are observations\n",
+    "\n",
+    "    Returns\n",
+    "    -------     \n",
+    "    list type, with optimal cutoff value\n",
+    "\n",
+    "    \"\"\"\n",
+    "    fpr, tpr, threshold = roc_curve(target, predicted)\n",
+    "    i = np.arange(len(tpr)) \n",
+    "    roc = pd.DataFrame({'tf' : pd.Series(tpr-(1-fpr), index=i), 'threshold' : pd.Series(threshold, index=i)})\n",
+    "    roc_t = roc.ix[(roc.tf-0).abs().argsort()[:1]]\n",
+    "\n",
+    "    return list(roc_t['threshold']) \n",
+    "\n",
+    "\n",
+    "# Add prediction probability to dataframe from train set\n",
+    "gradient_train = gradient_grid.predict_proba(X_train)\n",
+    "gradient_train = [p[1] for p in gradient_train]\n",
+    "\n",
+    "# Find optimal probability threshold\n",
+    "threshold = Find_Optimal_Cutoff(y_train, gradient_train)\n",
+    "print(threshold)\n",
+    "\n",
+    "# Find prediction to the dataframe applying threshold\n",
+    "#data['pred'] = data['pred_proba'].map(lambda x: 1 if x > threshold else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Applying threshold\n",
+    "\n",
+    "gradient_prediction_proba_root = gradient_grid.predict_proba(X_test)\n",
+    "gradient_prediction_proba = [p[1] for p in gradient_prediction_proba_root]\n",
+    "\n",
+    "prediction = pd.DataFrame(gradient_prediction_proba)\n",
+    "prediction.columns = ['Probability']\n",
+    "prediction['pred'] = prediction['Probability'].map(lambda x: 1 if x > 0.5 else 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.97      0.99      0.98       566\n",
+      "        1.0       0.63      0.40      0.49        30\n",
+      "\n",
+      "avg / total       0.95      0.96      0.95       596\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, prediction['pred']))"
    ]
   },
   {
