Added synthetic upsampling and auto encoder

--- a/src/Live Auction Neural Network.ipynb
+++ b/src/Live Auction Neural Network.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from scipy import stats\n",
     "import random\n",
+    "from imblearn.over_sampling import SMOTE, ADASYN\n",
     "\n",
     "import boto3\n",
     "import io\n",
@@ -59,7 +60,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sknn import ae, mlp\n",
     "from sklearn import ensemble\n",
-    "from sklearn.neural_network import MLPClassifier"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sknn import ae, mlp"
    ]
   },
   {
@@ -71,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 24.265435695648193 seconds ---\n"
+      "-- Execution time: 26.3821542263031 seconds ---\n"
      ]
     }
    ],
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,19 +357,20 @@
     "def outcome_feature_split(train):\n",
     "    y = train['outcome']\n",
     "    X = train.drop(['outcome','payment_account','address'],1)\n",
+    "    return X,y\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Execution time: 109.03289484977722 seconds ---\n"
+      "-- Execution time: 109.0541832447052 seconds ---\n"
      ]
     }
    ],
@@ -547,6 +550,300 @@
     "# MLP really doesnt do well with unbalanced classes.\n",
     "mlp_prediction = mlp_grid.predict(X_test)\n",
     "print(classification_report(y_test, mlp_prediction))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use SMOTE to UPsample\n",
+    "A part from random sampling with replacement, there are 2 popular methods to over-sample mintory classes. Synthetic Minority Oversampling Technique (SMOTE) and Adaptive Synthetic sampling method (ADASYN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test SMOTE\n",
+    "#Create outcome variable y and feature dataframe X\n",
+    "X,y = outcome_feature_split(training_set)\n",
+    "\n",
+    "# Do the test train split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2)\n",
+    "\n",
+    "X_resampled, y_resampled = SMOTE().fit_sample(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8140583554376658\n",
+      "-- Execution time: 24.298595428466797 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "################## MLP Model #################################################################\n",
+    "start_time = time.time()\n",
+    "# Establish and fit the model, with a single, 1000 perceptron layer.\n",
+    "\n",
+    "parameters = {'hidden_layer_sizes':[(1000,1000)],\n",
+    "             'activation':['logistic'],\n",
+    "             'solver':['adam'],\n",
+    "             'alpha':[0.001]}\n",
+    "\n",
+    "mlp = MLPClassifier()\n",
+    "\n",
+    "mlp_grid = GridSearchCV(mlp, parameters, scoring='roc_auc', cv=5, verbose=0)\n",
+    "\n",
+    "mlp_grid.fit(X_resampled, y_resampled)\n",
+    "\n",
+    "mlp_prediction_proba = mlp_grid.predict_proba(X_test)\n",
+    "mlp_prediction_proba = [p[1] for p in mlp_prediction_proba]\n",
+    "\n",
+    "# Produce the AUROC\n",
+    "print(roc_auc_score(y_test, mlp_prediction_proba))\n",
+    "print(\"-- Execution time: %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.96      0.90      0.93       377\n",
+      "        1.0       0.16      0.35      0.22        20\n",
+      "\n",
+      "avg / total       0.92      0.87      0.89       397\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The SMOTE Algorithm really improved the recall\n",
+    "mlp_prediction = mlp_grid.predict(X_test)\n",
+    "print(classification_report(y_test, mlp_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 14.01619291305542 seconds ---\n",
+      "0.8619363395225464\n"
+     ]
+    }
+   ],
+   "source": [
+    "####################### Gradient Boost Model ################################################\n",
+    "\n",
+    "#Will use Grid Search to do the cross validation.\n",
+    "start_time = time.time()\n",
+    "parameters = {'subsample':[0.95],\n",
+    "              'max_depth':[2],\n",
+    "             'n_estimators':[500]}\n",
+    "\n",
+    "# Initialize the model.\n",
+    "clf = ensemble.GradientBoostingClassifier(max_depth=6,loss='exponential')\n",
+    "\n",
+    "#Create grid and perform 8 cross validation\n",
+    "gradient_grid = GridSearchCV(clf, parameters, cv=8, verbose=0, scoring='roc_auc')\n",
+    "\n",
+    "#Fit the Data\n",
+    "gradient_grid.fit(X_resampled, y_resampled)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "\n",
+    "#  Test Score\n",
+    "gradient_prediction = gradient_grid.predict(X_test)\n",
+    "\n",
+    "gradient_prediction_proba = gradient_grid.predict_proba(X_test)\n",
+    "gradient_prediction_proba = [p[1] for p in gradient_prediction_proba]\n",
+    "\n",
+    "# Produce the AUROC\n",
+    "print(roc_auc_score(y_test, gradient_prediction_proba))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.97      0.94      0.96       377\n",
+      "        1.0       0.30      0.45      0.36        20\n",
+      "\n",
+      "avg / total       0.94      0.92      0.93       397\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, gradient_prediction))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using SMOTE to handle the imbalanced class, improved the recall for the MLP. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use ASADYN for Upsampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test SMOTE\n",
+    "#Create outcome variable y and feature dataframe X\n",
+    "X,y = outcome_feature_split(training_set)\n",
+    "\n",
+    "# Do the test train split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n",
+    "\n",
+    "X_resampled, y_resampled = ADASYN().fit_sample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7775258251448728\n",
+      "-- Execution time: 25.495235204696655 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "################## MLP Model #################################################################\n",
+    "start_time = time.time()\n",
+    "# Establish and fit the model, with a single, 1000 perceptron layer.\n",
+    "\n",
+    "parameters = {'hidden_layer_sizes':[(1000,1000)],\n",
+    "             'activation':['logistic'],\n",
+    "             'solver':['adam'],\n",
+    "             'alpha':[0.001]}\n",
+    "\n",
+    "mlp = MLPClassifier()\n",
+    "\n",
+    "mlp_grid = GridSearchCV(mlp, parameters, scoring='roc_auc', cv=5, verbose=0)\n",
+    "\n",
+    "mlp_grid.fit(X_resampled, y_resampled)\n",
+    "\n",
+    "mlp_prediction_proba = mlp_grid.predict_proba(X_test)\n",
+    "mlp_prediction_proba = [p[1] for p in mlp_prediction_proba]\n",
+    "\n",
+    "# Produce the AUROC\n",
+    "print(roc_auc_score(y_test, mlp_prediction_proba))\n",
+    "print(\"-- Execution time: %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using scikit-neauralnetwork"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create outcome variable y and feature dataframe X\n",
+    "X,y = outcome_feature_split(training_set)\n",
+    "\n",
+    "# Do the test train split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2)\n",
+    "\n",
+    "X_resampled, y_resampled = SMOTE().fit_sample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'downsample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-24ba58fa3a9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                 ae.Layer(\"Sigmoid\", units=64)],\n\u001b[1;32m      6\u001b[0m             \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.002\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m             n_iter=10)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Layerwise pre-training using only the input data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/nn.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, layers, warning, parameters, random_state, learning_rule, learning_rate, learning_momentum, normalize, regularize, weight_decay, dropout_rate, batch_size, n_iter, n_stable, f_stable, valid_set, valid_size, loss_type, callback, debug, verbose, **params)\u001b[0m\n\u001b[1;32m    511\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_create_logger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 513\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_setup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    514\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_setup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/ae.py\u001b[0m in \u001b[0;36m_setup\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     98\u001b[0m             \u001b[0;34m\"This auto-encoder has already been initialized.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         \u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAutoEncoderBackend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/backend/__init__.py\u001b[0m in \u001b[0;36msetup\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msetup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlasagne\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"No backend for module sknn was imported.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/backend/lasagne/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m...\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mmlp\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMultiLayerPerceptronBackend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Register this implementation as the MLP backend.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/sknn/backend/lasagne/mlp.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtheano\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mlasagne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlasagne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonlinearities\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/lasagne/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnonlinearities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mobjectives\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/lasagne/layers/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mnoise\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mconv\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mpool\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/lasagne/layers/pool.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mas_tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignal\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdownsample\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'downsample'"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize auto-encoder for unsupervised learning.\n",
+    "myae = ae.AutoEncoder(\n",
+    "            layers=[\n",
+    "                ae.Layer(\"Tanh\", units=128),\n",
+    "                ae.Layer(\"Sigmoid\", units=64)],\n",
+    "            learning_rate=0.002,\n",
+    "            n_iter=10)\n",
+    "\n",
+    "# Layerwise pre-training using only the input data.\n",
+    "myae.fit(X_resampled)\n",
+    "\n",
+    "# Initialize the multi-layer perceptron with same base layers.\n",
+    "mymlp = mlp.Classifier(\n",
+    "            layers=[\n",
+    "                mlp.Layer(\"Tanh\", units=128),\n",
+    "                mlp.Layer(\"Sigmoid\", units=64),\n",
+    "                mlp.Layer(\"Linear\")])\n",
+    "\n",
+    "# Transfer the weights from the auto-encoder.\n",
+    "myae.transfer(mymlp)\n",
+    "# Now perform supervised-learning as usual.\n",
+    "mymlp.fit(X_resampled, y_resampled)"
    ]
   },
   {
